--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-   "deploy": "gh-pages -d build"
+   "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -86,4 +86,5 @@
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19"
   }
+  
 }
